Adds needed packages

--- a/report.tex
+++ b/report.tex
@@ -5,14 +5,14 @@
 % Your information
 %   Enter your report information here
 \faculty{Faculty of Mathematics}
-\reporttitle{Lorem Ipsum}
-\fullname{Liam Horne}
+\reporttitle{Professional Skills Necessary for Working in the Long-Term Health Industry}
+\fullname{Fatema Boxwala}
 \term{2A}
 \program{Computer Science}
-\studentid{20465555}
-\address{123 Apple Street}
-\city{Cambridge, Ontario}
-\postalcode{A1X B2Y}
+\studentid{20567052}
+\address{18 Wall Street}
+\city{Brampton, Ontario}
+\postalcode{L6R 0N2}
 \pdtitle{PD2: Critical Reflection and Report Writing}
 
 % Title Page (ignore)
@@ -32,13 +32,25 @@
 \newcommand{\letterofsubmittal} {
   \waterlooletterofsubmittal
     {\myAddress}{\myCity}{\myPostalCode}{\myName}{\myIdNumber}
-    {
-
-    \lipsum[1] % remove this line
-
-    % Write your letter here
-
-    }
+    {This report, entitled "Professional Skills Necesaary for 
+    Working in the Long-Term Health Industry" has been prepared
+    as my 2A work-term report for PD2: Critical Reflection and 
+    Report Writing. The purpose of this report is to discuss the
+    professional skills one needs to work in the long-term health 
+    industry, and to analyze the importance of these skills in any
+    future industries one may work in. 
+    \par \noindent
+    PD2 is a course which instructs students on report writing, as
+    well as critical reflection and analysis. The quizzes and 
+    assignments in this course have taught me how to properly form my 
+    report, while adhering to a set of specific guidelines. The writing 
+    of this report has also caused me to reflect and analyse my own 
+    skills and weaknesses, and how I can improve going forward.
+    \par \noindent
+    This report was written entirely by me and has not received any 
+    previous academic credit at this or any other institution. I would
+    like to thank Ms. Srishti Gupta for proofreading my report. I have
+    received no other assistance.}
     {
     % Attach an image of your signature
     % The first number is a scale factor
@@ -55,13 +67,7 @@
 %   Write your summary here
 \newcommand{\summary}{
   \tocsection{Summary}
-  {
-
-  \lipsum[10-11] % remove this line
-
-  % Write your summary here
-
-  }
+  {  }
   \newpage
 }
 
@@ -75,11 +81,32 @@
   \pagenumbering{arabic}
   \mySection{Introduction}
   {
-
-  \lipsum[8-9] % remove this line
-
-  % Write your introduction here
-
+  For the past four months, I have been employed at the company 
+  PointClickCare, or PCC. PCC develops and maintains software for 
+  nursing homes. At its core, the PointClickCare application manages
+  Private Health Records for residents of nursing homes. One
+  of the app's most important usages is its integration with other
+  aspects of the senior care industry. For example, PCC interfaces 
+  with software at various pharmacies, allowing a resident's  prescriptions
+  to be refilled and delivered automatically.
+  \par \noindent
+  As a Testing Analyst in PCC's Vendor Integration Services department, my
+  job was concerned with these integrations. Although I was working
+  in a software position, the demands of my job required me to become
+  very familiar with the long-term healthcare (LTC) industry. During my time at 
+  PCC I learned and improved upon the  professional skills that are vital
+  in such a niche industry.
+  \par \noindent
+  In this report, I will describe the various professional skills developed
+  through working in the long-term healthcare industry. These include: 
+  understanding legal codes, communicating effectively and problem solving 
+  time-sensitive issues. My personal experiences with work, along with 
+  thorough research of my comapny's documentation, and readings from outside 
+  sources, allowed me to determine the importance these skills. 
+  \par \noindent
+  The report will then go on to analyze the applicability of these skills
+  to the software industry in general, and whether they can be used in any
+  future employment.
   }
   \newpage
 }
@@ -107,28 +134,61 @@
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   %%%%%%% This is an example, remove this entire block %%%%%%%%%
-  \mySection{My Amazing Section}{
-    \lipsum[2]
-    \mySubSection{My Amazing SubSection} {
-      \lipsum[12]
-      \bulletpoints{
-      \item first item
-      \item second item
+  \mySection{Professional Skills Devloped at PCC}{
+      during my time at PointClickCare I had to learn several new technical
+      and professional skills in order to be successful at my job. among the
+      professional skills i developed, the three most important were: 
+      understanding legal codes, communicating effectively and problem 
+      solving time-sensitive issues.
+    \mySubSection{Parsing and Understanding Legal Codes} {
+      As PCC's software deals with health records of residents and patients
+      at nursing homes, all of it's employees had to be compliant with all 
+      laws regarding the privacy of personal health information (PHI). 
+      PointClickCare's app is used in both Canada and the United States, and
+      as such, we were required to comply to PIPEDA (Canada's
+      Personal Information Protection and Electronic Documents Act) and HIPAA
+      (The United States' Health Insurance Portability and Accountability 
+      Act). These two Acts outline the responsibilities of any corporation
+      and it's employees, that deals with PHI (Statutes of Canada [SoC], 2000;
+      HIPAA, 1996).
+      \par \noindent
+      At PointClickCare, HIPAA and PIPEDA are taken very seriously. Every 
+      employee regardless of department is trained in HIPAA and PIPEDA compliance
+      so that we are all aware of our personal liabilities. Awareness and 
+      understanding of these acts is essential in the LTC industry, as the
+      penalties for any violation of these acts can be severe. As you can 
+      see in the table below, the corporate fine for a PIPEDA violation in 
+      Ontario is \$250,000. HIPAA violations are equally serious, and a table
+      of fines for various violations can be found in Appendix B of this
+      report.
+      \par \noindent
+      \myTable{.75}{pipedafines.png}{PIPEDA fines in various 
+      provinces (PointClickCare, 2015)}
+      Understanding HIPAA and PIPEDA became extremely relevant to my daily 
+      tasks at PointClickCare. As a client-facing employee, I was 
+      constantly sending emails and making phone calls to external organizations.
+      Any PHI, including even just a patients name, must be released only in
+      confidential correspondance, and only between parties authorized to 
+      handle PHI (PointClickCare, 2015). On multiple occasions, I have 
+      received unencrypted emails from clients containing PHI, such as the patient's
+      name. Replying to this email would be considered a HIPAA violation, 
+      as the quoted text would contain the initial email. I had to constantly
+      be on the lookout for such violations, since I can be held accountable
+      not only for violations I committed personally, but also for any 
+      violation committed by someone else that I noticed and did not report
+      (SoC, 2000; HIPAA, 1996). 
+      \par \noindent
+      Being able to comprehend and act upon these two legal codes was 
+      extremely important to my position at PCC. Any misunderstanding or
+      small slip up could have cost my company thousands of dollars.
       }
-      \mySubSubSection{My Amazing SubSubSection} {
-        \lipsum[10]
-        \myFigure{0.10}{examplefigure.jpg}{Hello, World}
-        \lipsum[11-12]
-        \myTable{0.3}{exampletable.png}{Hello, Table}
-      }
+    \mySubSection{Effective Communication}
+    some stuff
     }
   }
   \mySection{My Amazing Section}{
-    \lipsum[2]
     \mySubSection{My Amazing SubSection} {
-      \lipsum[12]
       \mySubSubSection{My Amazing SubSubSection} {
-        \lipsum[18-21]
       }
     }
   }
@@ -145,7 +205,6 @@
   \section{Conclusions}
   {
 
-  \lipsum[33-35] % remove this line
 
   % Write your conclusions here
 
@@ -158,7 +217,6 @@
   \section{Recommendations}
   {
 
-  \lipsum[37-39] % remove this line
 
   % Write your recommendations here
 
@@ -170,19 +228,24 @@
 \newcommand{\references}{
   \makereferences{
       % Add each reference like this, with some label for each item
-      \bibitem{labelName}
+      \bibitem{PD2book}
       Champion, R., Paci, T. \& Vardon, J. (2012). PD 2: Critical Reflection and Report Writing. Retrieved 1 March, 2012 from https://learn.uwaterloo.ca/d2l/le/content/80224/viewContent/605550/View
-  }
+      \bibitem{PIPEDA}
+      Personal Information Protection and Electronic Documents Act, Statutes
+      of Canada (2000, c.5). Retreived from the Department of Justice Canada
+      Website: http://laws-lois.justice.gc.ca/eng/acts/P-8.6/.
+      \bibitem{HIPAA}
+      Health Insurance Portability and Accountability Act. Pub. L. No. 104-191, § 264, 110 Stat.1936.
+      }
 }
 
 % Appendices
 %   Add your appendices
 \newcommand{\myappendix}{
   \addanappendix{Appendix A: Lorem Ipsum}{
-    \lipsum[50] % remove this line
   }
   \newpage
-  \addanappendix{Appendix B: PD2 Report Checlist}{\addchecklistappendix}
+  \addanappendix{Appendix B: PD2 Report Checklist}{\addchecklistappendix}
 }
 
 \begin{document}
