Let supervisor name be variable

--- a/report.tex
+++ b/report.tex
@@ -14,6 +14,7 @@
 \city{Cambridge, Ontario}
 \postalcode{A1X B2Y}
 \pdtitle{PD2: Critical Reflection and Report Writing}
+\supervisor{Mr.}{Tim}{Paci}
 
 % Title Page (ignore)
 %   Creates the title page based on your information above
@@ -31,7 +32,7 @@
 %   and signature (except the image) are done for you already
 \newcommand{\letterofsubmittal} {
   \waterlooletterofsubmittal
-    {\myAddress}{\myCity}{\myPostalCode}{\myName}{\myIdNumber}
+    {\myAddress}{\myCity}{\myPostalCode}{\supervisorAddress}{\supervisorSalutation}{\myName}{\myIdNumber}
     {
 
     \lipsum[1] % remove this line
