--- a/pd2.sty
+++ b/pd2.sty
@@ -61,6 +61,11 @@
 
 \newcommand{\UwLocation}{Waterloo, Ontario}
 
+\newcommand{\supervisor}[3] {
+\newcommand{\supervisorAddress}{#1 #2 #3}
+\newcommand{\supervisorSalutation}{#1 #3}
+}
+
 \newlength\mylen
 \settowidth\mylen{Figure\ }
 \addtolength\cftfignumwidth{\mylen}
@@ -107,26 +112,26 @@
 
     }
 
-    \newcommand{\waterlooletterofsubmittal}[7] {
+    \newcommand{\waterlooletterofsubmittal}[9] {
     \begin{waterlooletter}
     #1 \\
     #2 \\
     #3 \\ \\
     \today \\ \\
-    Mr. Tim Paci, PD2 Instructor \\
+    #4, PD2 Instructor \\
     Professional Development Program \\
     University of Waterloo \\
     200 University Avenue West \\
     Waterloo, Ontario \\
     N2L 3G1 \\ \\
-    Dear Mr. Paci: \\
+    Dear #5: \\
 
-    #6
+    #8
 
     Sincerely, \\ \\
-    #7 \\
-    #4 \\
-    ID #5
+    #9 \\
+    #6 \\
+    ID #7
     \end{waterlooletter}
     }
 
