--- a/pd2.sty
+++ b/pd2.sty
@@ -186,7 +186,7 @@
     \item $\left[ Y  \right]$ Use a 12-point serif font
     \item $\left[ Y  \right]$ Be double-spaced
     \item $\left[ Y \right]$ Be written in formal, standard English, with no contractions
-    \item $\left[ Y  \right]$ Be spellchecked and proofread
+    \item $\left[ Y  \right]$ Be spell checked and proofread
     \item $\left[ Y \right]$ Include pages numbered according to the conventions described in the Report Resources tab.
     \end{itemize}
     Your report must conform to the format and conventions described in the Report Resources page. You do not have to bind your report or include a front cover because you will submit your report to us online. Your report will include the following pages and sections:
@@ -194,7 +194,7 @@
     \item $\left[ Y \right]$ Title page
     \item $\left[ Y \right]$ Letter of submittal (addressed to the PD 2 course instructor)
     \item $\left[ Y \right]$ Table of contents
-    \item $\left[ Y \right]$ List of figures and tables, if appropriate (Figures or tables in an appendix should not be listed on the List of figures and tables; figures or tables elsewhere in your report are required to bbe on this list.)
+    \item $\left[ Y \right]$ List of figures and tables, if appropriate (Figures or tables in an appendix should not be listed on the List of figures and tables; figures or tables elsewhere in your report are required to be on this list.)
     \item $\left[ Y \right]$ Summary
     \item $\left[ Y \right]$ Introduction
     \item $\left[ Y \right]$ Body (that includes both an objective analytical component and a reflective component)
